# django-tailwind

./: .gitattributes  .gitignore  .gitpod.yml  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS  CHANGELOG.md  CHANGELOG.txt  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  Procfile.tailwind  README.md  README.rst  manage.py  pyproject.toml  setup-ai.md  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: ci.yml  python-package.yml  tests.yml
docs/: conf.py  django_browser_reload.md  docker.md  existing-project.md  index.md  installation.md  jit-vs-aot.md  migration.md  plugins.md  requirements.txt  settings.md  standalone-vs-npm.md  templatetags.md  updating.md  upgrade.md  upgrading.md  usage.md
docs/source/: conf.py  docker.rst  extras.rst.txt  index.rst  installation.rst  migrate_sync_reload.rst  settings.rst  template_tags.rst  updating.rst  upgrade_v2_v3.rst  upgrade_v3_v4.rst  usage.rst
example/: Dockerfile  README.md  docker-compose.yml  manage.py  requirements.txt  tailwindstart
example/example_project/: asgi.py  settings.py  urls.py  wsgi.py
example/project/: asgi.py  settings.py  urls.py  wsgi.py
example/theme/static/theme/css/: styles.css
example/theme/static_src/: bs.config.js  package-lock.json  package.json  postcss.config.js  tailwind.config.js
example/theme/static_src/src/: styles.css
example/theme/templates/: base.html
example/theme_standalone/: apps.py
example/theme_standalone/static_src/: package.json  postcss.config.js
example/theme_standalone/static_src/src/: styles.css
example/theme_standalone/templates/: base.html
example/theme_v4/: apps.py
example/theme_v4/static_src/: package-lock.json  package.json
src/django_tailwind/: __init__.py  apps.py  npm.py  utils.py  validate.py
src/django_tailwind/app_template/: cookiecutter.json
src/django_tailwind/app_template/{{cookiecutter.app_name}}/static_src/: package.json  postcss.config.js  tailwind.config.js
src/django_tailwind/management/commands/: tailwind.py
src/django_tailwind/templates/tailwind/tags/: css.html  preload_css.html
src/django_tailwind/templatetags/: tailwind_tags.py
src/tailwind/: __init__.py  conf.py  npm.py  utils.py  validate.py
src/tailwind/app_template/: cookiecutter.json
src/tailwind/app_template/{{cookiecutter.app_name}}/static_src/: bs.config.js  package.json  postcss.config.js  tailwind.config.js
src/tailwind/app_template/{{cookiecutter.app_name}}/static_src/src/: styles.css
src/tailwind/app_template_standalone_v4/: cookiecutter.json
src/tailwind/app_template_v2/: cookiecutter.json
src/tailwind/app_template_v2/hooks/: pre_gen_project.py
src/tailwind/app_template_v2/{{cookiecutter.app_name}}/static_src/: bs.config.js  package.json  tailwind.config.js
src/tailwind/app_template_v2/{{cookiecutter.app_name}}/templates/: base.html
src/tailwind/app_template_v3/{{cookiecutter.app_name}}/static_src/: package.json  postcss.config.js
src/tailwind/app_template_v4/: cookiecutter.json
src/tailwind/app_template_v4/{{cookiecutter.app_name}}/: apps.py
src/tailwind/app_template_v4/{{cookiecutter.app_name}}/static_src/: package.json  postcss.config.js
src/tailwind/app_template_v4/{{cookiecutter.app_name}}/static_src/src/: styles.css
src/tailwind/app_template_v4/{{cookiecutter.app_name}}/templates/: base.html
src/tailwind/app_template_v4_standalone/hooks/: pre_gen_project.py
src/tailwind/app_template_v4_standalone/{{cookiecutter.app_name}}/templates/: base.html
src/tailwind/management/commands/: tailwind.py  windev.py
src/tailwind/templates/tailwind/tags/: css.html  preload_css.html
src/tailwind/templatetags/: tailwind_tags.py
tailwind/: apps.py  conf.py  npm.py  utils.py  validate.py
tailwind/app_template/static_src/: package-lock.json  package.json  postcss.config.js  tailwind.config.js
tailwind/app_template/templates/: base.html
tailwind/app_template_v1/static_src/: package-lock.json  package.json  tailwind.config.js
tailwind/app_template_v1/templates/: base.html
tailwind/app_template_v2/: cookiecutter.json
tailwind/app_template_v2/static_src/: package-lock.json  package.json  tailwind.config.js
tailwind/app_template_v2/{{cookiecutter.app_name}}/static_src/: bs.config.js  package.json  postcss.config.js  tailwind.config.js
tailwind/app_template_v2/{{cookiecutter.app_name}}/templates/: base.html
tailwind/app_template_v2_jit/static_src/: package.json  tailwind.config.js
tailwind/management/commands/: tailwind.py
tailwind/templates/: base.html
tailwind/templates/tailwind/forms/: attrs.html  field.html  form.html  formset.html
tailwind/templates/tailwind/tags/: css.html
tailwind/templatetags/: tailwind_tags.py
test_project/: settings.py  urls.py
test_theme_0512e3b0_b8a2_11f0_bdab_6045bd02a4a3/: apps.py
test_theme_0512e3b0_b8a2_11f0_bdab_6045bd02a4a3/static_src/: package.json
test_theme_0512e3b0_b8a2_11f0_bdab_6045bd02a4a3/templates/: base.html
tests/: apps.py  conftest.py  settings.py  test_cli.py  test_dev_command.py  test_templatetags.py  test_utils.py
theme/: apps.py  forms.py
theme/static/css/: styles.css  styles.css.map
theme/static_src/: package-lock.json  package.json  tailwind.config.js
theme/templates/: base.html  forms.html
