[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-tailwind-4"
version = "0.1.1"
description = "Tailwind 4 CSS Framework for Django projects"
authors = [
   {name = "Ryan Sevelj", email = "rsevs3@gmail.com"},
   {name = "Tim Kamanin", email = "tim@timonweb.com"}
]
maintainers = [
   {name = "Ryan Sevelj", email = "rsevs3@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10.0"
keywords = ["django", "tailwind", "css"]
classifiers = [
   "Development Status :: 3 - Alpha",
   "Intended Audience :: Developers", 
   "License :: OSI Approved :: MIT License",
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
   "Operating System :: OS Independent",
   "Topic :: Software Development :: Libraries",
   "Topic :: Utilities",
   "Environment :: Web Environment",
   "Framework :: Django"
]
dependencies = [
   "django>=3.2.14",
]

[project.optional-dependencies]
reload = ["django-browser-reload>=1.17.0"]
dev = [
   "pytest>=8.3.4",
   "pytest-django>=4.9.0", 
   "tox>=4.24.1",
   "pre-commit>=4.1.0",
   "isort>=5.13.2",
   "flake8>=7.1.1",
   "black>=24.10.0",
   "Sphinx>=8.1.3",
   "recommonmark>=0.7.1",
   "sphinx-rtd-theme>=3.0.2"
]

[project.urls]
Homepage = "https://github.com/rsevs3/django-tailwind-4"
Documentation = "https://django-tailwind-4.readthedocs.io"
Tracker = "https://github.com/rsevs3/django-tailwind-4/issues"
Changelog = "https://github.com/rsevs3/django-tailwind-4/releases"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages]
find = {where = ["src"]}
