[tool.poetry]
name = "django-tailwind"
version = "4.0.1"
description = "Tailwind CSS Framework for Django projects"
authors = ["Tim Kamanin <tim@timonweb.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/timonweb/django-tailwind"
keywords = ["django", "tailwind", "css"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Environment :: Web Environment",
    "Framework :: Django"
]
packages = [
    { include = "tailwind", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
django = ">=4.2.20"
django-browser-reload = { version = "^1.18.0", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^8.3.5"
pytest-django = "^4.11.0"
tox = "^4.25.0"
pre-commit = "^4.2.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
black = "^25.1.0"
Sphinx = "^8.1.3"
recommonmark = "^0.7.1"
sphinx-rtd-theme = "^3.0.2"

[tool.poetry.extras]
reload = ["django-browser-reload"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
